# dataq

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: plugin.json
.github/workflows/: publish-homebrew-tap.yml  release.yml
.serena/: project.yml
.work/plan/: 00_index.md  00_priority_index.md  01_doctor.md  01_profile_mvp.md  02_merge_policy.md  02_sdiff_gate.md  03_recipe_run.md  03_sdiff_modes.md  04_assert_rules_ext.md  04_assert_rules_reuse.md  05_emit_pipeline.md  05_profile_numeric_stats.md  06_join_aggregate.md  06_jsonschema_bridge.md  07_merge_path_policy.md  08_stream_autodetect.md  09_contract_command.md  10_execution_fingerprint.md  assert.md  canon.md  sdiff.md
docs/: architecture.md  command-spec.md  homebrew-tap.md  rules-schema.md
docs/releases/: v0.1.14.md
scripts/: generate-homebrew-formula.sh
skills/dataq/: SKILL.md
skills/dataq-rules-recipes/: SKILL.md
src/: lib.rs  main.rs
src/adapters/: jq.rs  mdbook.rs  mlr.rs  mod.rs  nb.rs  pandoc.rs  rg.rs  xh.rs  yq.rs
src/cmd/: aggregate.rs  assert.rs  canon.rs  codex.rs  contract.rs  diff.rs  doctor.rs  emit.rs  gate.rs  ingest.rs  ingest_api.rs  ingest_yaml_jobs.rs  join.rs  mcp.rs  merge.rs  mod.rs  profile.rs  recipe.rs  scan.rs  sdiff.rs  stage_trace.rs  transform.rs
src/domain/: error.rs  ingest.rs  mod.rs  report.rs  rules.rs  schema.rs  value_path.rs
src/engine/: aggregate.rs  emit_plan.rs  join.rs  mod.rs  scan.rs
tests/: assert_cli.rs  canon_assert_flow.rs  canon_cli.rs  canon_flow.rs  canon_sdiff_flow.rs  cli.rs  integration.rs  sdiff_cli.rs
(+89 files in other folders)
