[package]
name = "dataq"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
